--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/default.css" type="text/css">
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid navbar">
       <div class="row">
         <div class="col-md-12" role="navigation">
           <div class="navbar-header">
