--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
         <li><button class="try">Try It Now</button></li>
       </ul>
     </div>
-    <script src="js/default.js" type="text/javascript"></script>
+    <div>
+      <img class="main" src="images/main.png">
+      <script src="js/default.js" type="text/javascript"></script>
+    </div>
   </body>
 </html>
