Laying out the next section of site and making visual changes through CSS

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,11 @@
         <li><a href="https://metricwire.com"><button class="try">Try It Now</button><a></li>
       </ul>
       <img class="main" src="images/main.png"> 
-      <script src="js/default.js" type="text/javascript"></script>
     </div>
+    <div>
+      <h1 class="research">Your Tools to Breakthrough Research</h1>
+        <h2 class="research-one">MetricWire gives researchers complete creative control over the design of their study. Our user-friendly interface allows researchers to design and deploy their study within minutes; no coding necessary. MetricWire makes smartphone research easy.</h2>
+    </div>
+    <script src="js/default.js" type="text/javascript"></script>
   </body>
 </html>
