--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <div>
       <h1 class="research">Your Tools to Breakthrough Research</h1>
         <h2 class="research-one">MetricWire gives researchers complete creative control over the design of their study. Our user-friendly interface allows researchers to design and deploy their study within minutes; no coding necessary. MetricWire makes smartphone research easy.</h2>
+        <img class="main" src="images/academia.jpg"> 
+        <img class="main" src="images/consumer.jpg"> 
+        <img class="main" src="images/health.jpg"> 
     </div>
     <script src="js/default.js" type="text/javascript"></script>
   </body>
