--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
     </div>
     <div>
       <h1 class="research">Your Tools to Breakthrough Research</h1>
-        <h2 class="research-one">MetricWire gives researchers complete creative control over the design of their study. Our user-friendly interface allows researchers to design and deploy their study within minutes; no coding necessary. MetricWire makes smartphone research easy.</h2>
-        <img class="main" src="images/academia.jpg"> 
-        <img class="main" src="images/consumer.jpg"> 
-        <img class="main" src="images/health.jpg"> 
+      <h2 class="research-one">MetricWire gives researchers complete creative control over the design of their study. Our user-friendly interface allows researchers to design and deploy their study within minutes; no coding necessary. MetricWire makes smartphone research easy.</h2>
+      <a><img class="research-image" src="images/health.jpg"> Clinical Research <br>Using mobile and tablet applications, pharmaceutical companies can collect higher quality data and more of it to improve trial success rates. <br> Learn More ></a>
+      <img class="research-image" src="images/consumer.jpg"> 
+      <img class="research-image" src="images/academia.jpg"> 
     </div>
     <script src="js/default.js" type="text/javascript"></script>
   </body>
